Added another AUSM reference

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -540,3 +540,10 @@ almost arbitrary two-dimensional grids",
   pages = 	 "606--613",
   month = 	 "November"}
   month = 	 November}
+
+@InProceedings{li:1995,
+  author = 	 "M. S. Liou",
+  title = 	 "{Progress towards an Improved CFD Method: AUSM+}",
+  booktitle = 	 "12th AIAA CFD Conference",
+  year = 	 1995,
+  volume = 	 "AIAA 95-1701-CP"}
