Work in Donna's latest input

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -290,7 +290,16 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
   number = "{SFME/LTMF/RT/09-010/A}"
 }
 
-
+@Article{ca-he-le:2008,
+  author = 	 {D. A. Calhoun and C. Helzel and R. J. LeVeque},
+  title = 	 {Logically rectangular grids and finite volume
+                    methods for {PDE}s in circular and spherical domains},
+  Journal = 	 {{SIAM} Review},
+  year = 	 2008,
+  volume =       50,
+  pages =        "723--752",
+  number =       4,
+}
 
 @Article{be-ca-he-le:2009,
   author = 	 "M. J. Berger and D. Calhoun, C. Helzel, R. J. LeVeque",
