No changes;  just added a comment

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -538,7 +538,7 @@ almost arbitrary two-dimensional grids",
   publisher = "Wiley"}
 
 
-
+% Added a change here :
 @Article{li:2010,
   author = 	 "M. S. Liou",
   title = 	 "The Evolution of AUSM Schemes",
