Fake change - just doing some git testing

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -529,7 +529,8 @@ almost arbitrary two-dimensional grids",
 
 @InProceedings{he-hu:2008,
   author = 	 "R. Herbin and F. Hubert",
-  title = 	 "Benchmark on discretization schemes for anisotropic diffusion problems on general grids",
+  title = 	 "Benchmark on discretization schemes for anisotropic
+diffusion problems on general grids",
   booktitle = "{F}inite {V}olumes for {C}omplex  {A}pplications {V} : {P}roblems and {P}erspectives",
   pages = 	 "659--692",
   year = 	 2008,
@@ -538,7 +539,7 @@ almost arbitrary two-dimensional grids",
   publisher = "Wiley"}
 
 
-% Added a change here :
+% Added a change here; another fake comment here
 @Article{li:2010,
   author = 	 "M. S. Liou",
   title = 	 "The Evolution of AUSM Schemes",
