--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -250,7 +250,7 @@ each MPI rank.
 
 Mesh modification directives, such as adaptive refinement and coarsening, are
 called from \forestclaw and executed as black-box operations inside \pforest.
-The only information that flows back to \pforest is a set of per-patch
+The only information that flows into \pforest is a set of per-patch
 refinement and coarsening flags, which are computed from the numerical state in
 \forestclaw.  Our current algorithm requires neighbor patches to have a size
 difference of at most a factor of two (the 2:1 balance condition).  This condition
@@ -308,11 +308,15 @@ space filling curve.  Each MPI rank has a local view on its own partition,
 augmented where necessary with information about one layer of ghost leaves
 (see \Fig{cubed3}).
 
-\forestclaw uses iterators over all rank-local leaves, optionally restricted to
-a given level.  Random access is possible and used when executing $\cO(1)$ time
-neighbor lookups.  Looping over the patches in the order prescribed by the
-forest
-\alert{Review 2 - Explain the preceding paragraph in more detail}
+\forestclaw uses iterators over all rank-local leaves to execute numerical
+tasks one patch at a time, optionally restricted to a given refinement level.
+Random access to patches is possible and used when dereferencing the results
+from
+% executing
+% $\cO(1)$ time
+neighbor lookups.  Looping over the patches in the order
+prescribed by the forest
+% \alert{Review 2 - Explain the preceding paragraph in more detail}
 % \comment{tree?}
 % CB: I think forest is fine here.
 and
@@ -321,33 +325,70 @@ percentage of cache reuse
 \cite{BursteddeBurtscherGhattasEtAl09}.
 % since the ghost patches are likely closeby with respect to the $z$-order.
 
-
-
-\alert{The exchange of ghost} data and parallel repartitioning is
-provided transparently by \pforest.
-\alert{Review 2 requests more info on how this is done.  Sounds like they are more curious about the refinement overhead to other leaves on the tree and the strategy as to how refinement is decided.
-%
-Quote: How is AMR working in detail. For example: Figure 1 shows a
-2:1 refinement, thus refinement of a single patch could affect a whole region
-of the computational domain. + The underlying equations are known to
-Forestclaw: How is is the information shared with p4est (equation dependent
-refinement criteria, refinement and coarsening strategies (interpolation,
-integration).
-}
-
-
 When \forestclaw accesses neighbor patches, they can be on the same or a
 different block.  In the latter case, coordinate transformations are carried
 out.  The structure of \forestclaw is oblivious to the fact that it only has a
 local view of the distributed mesh and data which relieves the developer from
-programming to the MPI interface.  Parallel neighbor exchanges are hidden
-inside \pforest and called by \forestclaw at well-defined synchronization
-points.  There is one such parallel data exchange per time step for a global
-value of $\dt$, the time step length, or one exchange per discretization level per time step if $\dt$
-is chosen per-patch depending on its size (this is sometimes called
-sub-cycling).  When using sub-cycling, the load balance is attained per level as
-it is done for example in Chombo \cite{ColellaGravesKeenEtAl07}
-or recent geometric adaptive multigrid schemes
+programming to the MPI interface.
+% Parallel neighbor exchanges are hidden
+% inside \pforest and called by \forestclaw
+% % at well-defined synchronization points
+% as follows.
+
+With MPI parallelism, neighbor patches can be either local or assigned to a
+different process (ghost patches).  Since this must make no difference
+numerically, we need to ensure that the values of ghost patches are current
+whenever they are accessed.  To this end, we allocate storage for a layer of
+ghost patches in \forestclaw, which we can pass to a general-purpose \pforest
+routine that communicates local leaf data to all processes that view a
+particular leaf as a ghost.  If we call this routine before we go through the
+local neighbor interactions, we can handle ghost values implicitly by neighbor
+lookups without querying if they are local or remote.
+
+% \alert{The exchange of ghost} data and parallel repartitioning is
+% provided transparently by \pforest.
+% \alert{Review 2 requests more info on how this is done.  Sounds like they are more curious about the refinement overhead to other leaves on the tree and the strategy as to how refinement is decided.
+% %
+% Quote: How is AMR working in detail. For example: Figure 1 shows a
+% 2:1 refinement, thus refinement of a single patch could affect a whole region
+% of the computational domain. + The underlying equations are known to
+% Forestclaw: How is is the information shared with p4est (equation dependent
+% refinement criteria, refinement and coarsening strategies (interpolation,
+% integration).
+% }
+% CB: Is this addressed sufficiently now?
+
+% count of exchanges with and without sub-cycling
+In the context of finite-element or finite-difference methods, there should be
+one such parallel data exchange per time step for a global value of the time
+step length $\dt$, or one exchange per discretization level per time step if
+$\dt$ is chosen per-patch depending on its size (this is sometimes called
+sub-cycling).  In the tradition of block-structured AMR codes, interaction
+between neighbor patches is done in a hierarchy from coarse to fine levels, and
+then correction factors are propagated back from fine to coarse levels, requiring
+an exchange at each level.  With sub-cycling, this entails a recursion with an
+operation count that is exponential in the difference between the largest and
+the smallest refinement level, with the benefit that $\dt$ matches the CFL
+condition at each level.  While a large number of exchanges per time step can
+present a scaling bottleneck due to the inherent synchronization and latency
+losses, the expectation is still that the time to solution improves when
+switching from uniform to adaptive meshes, since we are computing with fewer
+patches, and improves again when enabling sub-cycling, since we take larger
+time steps on the coarser levels.
+
+% load balance / (weighted) partition
+The space-filling curve paradigm allows for lightweight repartitioning
+algorithms.  Even uniform meshes benefit from this approach since the number of
+processors does not need to be commensurable with the number of patches in each
+space dimension.  For adaptive meshes, we repartiton after every refinement
+operation and transfer the numerical data accordingly; see \cite[Fig.\
+4]{BursteddeGhattasStadlerEtAl08} for the overall procedure.  When using
+sub-cycling, we have the option to assign a weight to each patch based on its
+level, determined by the expected number of sub-cycles per coarse-level time
+step, and partition to equidistribute the cumulative weight between the
+processors.  Currently, we are not enforcing a load balance that is attained
+separately for each level, as it is done for example in Chombo
+\cite{ColellaGravesKeenEtAl07} or recent geometric adaptive multigrid schemes
 \cite{SundarBirosBursteddeEtAl12}.
 
 The threaded parallelism over the degrees of freedom of a patch can be handled
@@ -441,8 +482,8 @@ The numerical results to date have been designed to verify that
 interface layer between \pforest and \forestclaw is sufficiently
 flexible and robust.  Of particular importance was ensuring that all
 ghost cell transfers (including averaging and
-interpolation) have been implemented correctly.
-The basic \clawpack algorithm and corresponding code have been
+interpolation) are implemented correctly.
+The basic \clawpack algorithm and corresponding code are
 thoroughly tested and need no further verification in our context.
 
 In both sets of numerical results, we solve a scalar advection
