Comment on Stampede allocation

--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -552,7 +552,7 @@ time in \Fig{results2d}.
 \label{fig:uniscale}
 \end{figure}%
 We begin our analysis of Example 1 with uniform-mesh experiments run on TACC's
-\emph{Stampede} supercomputer at different levels of resolution.  First of all,
+Stampede supercomputer at different levels of resolution.  First of all,
 we use 1 to 16 MPI processes on one 16-core compute node, obtaining a strong
 scaling efficiency for the time integration between 97\%--103\% depending on
 the resolution (from levels 1 and 8).  Then, we examine processor counts from
@@ -654,6 +654,8 @@ To demonstrate a multiblock connectivity, we include results for Example 2 in
 
 \section*{Acknowledgements}
 
+We would like to thank the Texas Advanced Computing Center (TACC) for access to
+the Stampede supercomputer under allocation TG-DPP130002.
 The authors acknowledge valuable discussion with Randy LeVeque, Marsha
 Berger, and Hans-Petter Langtangen.  We also acknowledge David
 Ketcheson and the KAUST sponsored HPC$^3$ numerics workshop at which
@@ -663,7 +665,6 @@ author would like to also acknowledge the Isaac Newton Institute
 \forestclaw was done. The leaf/patch paradigm was independently
 presented by B.\ as part of a talk at the SCI Institute, Salt Lake City, Utah,
 USA in July 2011.
-\alert{Add TACC Stampede grants}
 
 
 %%%%%%%%%%% The bibliography starts:
